--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 *::after {
   box-sizing: border-box;
 }
-body{
+html{
   overflow-x: hidden;
 }
 /* Custom Properties, update these for your own design */
